@@ -2519,4 +2519,31 @@ sub ousToHide
     return \@ous;
 }
 
+sub checkMailNotInUse
+{
+    my ($self, $addr) = @_;
+    my $usersMod = $self->global()->modInstance('users');
+    my %searchParams = (
+        base => $usersMod->ldap()->dn(),
+        filter => "&(|(objectclass=couriermailaccount)(objectclass=zentyalDistributionGroup))(mail=$addr)",
+        scope => 'sub'
+    );
+
+    my $result = $self->{'ldap'}->search(\%searchParams);
+    if ($result->count() > 0) {
+        my $entry = $result->entry(0);
+        my $modeledObject = $usersMod->entryModeledObject($entry);
+        my $type = $modeledObject ? $modeledObject->printableType() : $entry->get_value('objectClass');
+        my $name = $modeledObject ? $modeledObject->name() : $entry->get_value('dn');
+        EBox::Exceptions::External->throw(__x('Address {addr} is already in use by the {type} {name}',
+                                              addr => $addr,
+                                              type => $type,
+                                              name => $name,
+                                        ),
+                                    );
+    }
+
+
+}
+
 1;
